--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-
+  sqflite: ^2.2.2
+  image_picker: ^0.8.4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -65,6 +66,7 @@ flutter:
     - assets/images/area-circulo.png
     - assets/images/area-quadrado.png
     - assets/images/trapezio.png
+    - assets/images/logo-app.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
