--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,11 +32,12 @@ dependencies:
     sdk: flutter
 
   sqflite: ^2.2.2
-  image_picker: ^0.8.4
+  image_picker: ^1.0.4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.6
+  share_plus: ^7.2.1
 
 dev_dependencies:
   flutter_test:
@@ -48,7 +49,6 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
